<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_name" />

    <EditText
        android:id="@+id/editTextNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_content" />

    <Button
        android:id="@+id/buttonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note" />
</LinearLayout>





